--- a/project/static/project/css/main.css
+++ b/project/static/project/css/main.css
@@ -303,3 +303,11 @@ header::after {
         font-weight: 600
     }
 }
+
+
+/* Start Post content */
+.post{
+    border: 1px solid #CCC;
+}
+
+/* End Post content */
