--- a/project/templates/project/index.html
+++ b/project/templates/project/index.html
@@ -2,7 +2,16 @@
 
 {% block content %}
 
-<h1>جوجوووووو</h1>
+{% for post in posts  %}
+      <div class="post p-3 mb-4">
+          <img class="reportLogo" src="project/images/report.png" alt="">
+          <span class="text-secondary">    تم رفع تقرير الالتزام في  {{post.post_date}} </span>
+          <h3><a class="text-dark" href="">{{post.title}} </a></h3>
+          <p>{{post.content}}</p>
+
+      </div>
+
+{% endfor %}
 
 {% endblock content %}
 
